# calendar-mcp

./: .gitignore  .python-version  IMPLEMENTATION.md  README.md  pyproject.toml
src/calendar_mcp/: __init__.py  calendar_manager.py  models.py  server.py
tests/: __init__.py
tests/unit/: __init__.py  test_models.py  test_server_handlers.py
